# link-shortener

./: .env  .env.example  API.md  Cargo.toml
migrations/: 20240101000000_create_urls_table.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs
